Draw text and rectangle commands

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <small>teeniweeny</small>
       <br />
       <big>Im a moster</big>
+      <pre>this is code</pre>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Eu scelerisque felis
