Supporting imported styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Elli title in the head tag</title>
+    <link rel="stylesheet" href="main.css" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
