Support inherited styling, move default styling to browser css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Elli title in the head tag</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="index.css" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -36,11 +36,10 @@
   </head>
   <body>
     <div>
-      This is a test text that is on two lines, not!
+      This is a test text that is on<br />two lines
       <p>This is a paragraph!</p>
       <b>I am fat and <i>italic</i></b>
       <small>teeniweeny</small>
-      <br />
       <big>Im a moster</big>
       <pre>this is code</pre>
       <p>
