--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <small>teeniweeny</small>
       <big>Im a moster</big>
       <pre>this is code</pre>
+      <p>Chinese: <a href="https://www.zggdwx.com/xiyou/1.html">here</a></p>
+      <a href="https://browser.engineering/chrome.html">English</a>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Eu scelerisque felis
@@ -143,8 +145,8 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Eu scelerisque felis
-        imperdiet proin fermentum leo. Porta non pulvinar neque laoreet. Eget
-        eu mi bibendum. Nibh sed pulvinar proin gravida hendrerit. Et malesuada
+        imperdiet proin fermentum leo. Porta non pulvinar neque laoreet. Eget eu
+        mi bibendum. Nibh sed pulvinar proin gravida hendrerit. Et malesuada
         fames ac turpis egestas. Curabitur gravida arcu ac tortor. Sed blandit
         libero volutpat sed cras ornare. Tempus iaculis urna id volutpat. Id
         volutpat lacus laoreet non curabitur gravida arcu ac tortor. At
