Support for <form>, <input>, <button> and POST requests

--- a/index.html
+++ b/index.html
@@ -12,23 +12,6 @@
             "position": 1,
             "name": "中国古典文学",
             "item": "https://www.zggdwx.com"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "明清通俗小说",
-            "item": "https://www.zggdwx.com/category/36"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "西游记",
-            "item": "https://www.zggdwx.com/xiyou.html"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "第一回 灵根育孕源流出 心性修持大道生"
           }
         ]
       }
@@ -38,6 +21,11 @@
     <div>
       This is a test text that is on<br />two lines
       <p>This is a paragraph!</p>
+      <form action="/submit">
+        <p>Name: <input name="name" value="1" /></p>
+        <p>Comment: <input name="comment" value="2" /></p>
+        <p><button>Submit!</button></p>
+      </form>
       <b>I am fat and <i>italic</i></b>
       <small>teeniweeny</small>
       <big>Im a moster</big>
