Run JS, simple DOM API

--- a/index.html
+++ b/index.html
@@ -2,20 +2,8 @@
   <head>
     <title>Elli title in the head tag</title>
     <link rel="stylesheet" href="index.css" />
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "中国古典文学",
-            "item": "https://www.zggdwx.com"
-          }
-        ]
-      }
-    </script>
+    <link rel="stylesheet" href="comment.css" />
+    <script src="index.js"></script>
   </head>
   <body>
     <div>
