Draw rects with rounded corners

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <div>
       This is a test text that is on<br />two lines
       <p>This is a paragraph!</p>
+      <div
+        style="border-radius: 10px; background-color: lightblue"
+        data-test="hej"
+      >
+        This is some example text.
+      </div>
+      <div style="background-color: orange">
+        Parent
+        <div style="background-color: white; border-radius: 5px">Child</div>
+        Parent
+      </div>
       <form action="/submit">
         <p>Name: <input name="name" value="1" /></p>
         <p>Comment: <input name="comment" value="2" /></p>
