--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <div>
       This is a test text that is on<br />two lines
       <p>This is a paragraph!</p>
-      <div
-        style="border-radius: 10px; background-color: lightblue"
-        data-test="hej"
-      >
+      <div style="border-radius: 10px; background-color: lightblue">
         This is some example text.
       </div>
       <div style="background-color: orange">
         Parent
-        <div style="background-color: white; border-radius: 5px">Child</div>
+        <div style="background-color: white; border-radius: 5px; opacity: 0.5">
+          Child
+        </div>
         Parent
       </div>
       <form action="/submit">
