Support mix-blend-mode

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         </div>
         Parent
       </div>
+      Parent break
+      <div style="background-color: orange">
+        Parent
+        <div style="background-color: blue; mix-blend-mode: difference">
+          Child
+        </div>
+        Parent
+      </div>
       <form action="/submit">
         <p>Name: <input name="name" value="1" /></p>
         <p>Comment: <input name="comment" value="2" /></p>
