--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </div>
         Parent
       </div>
+      Parent break
+      <div
+        style="border-radius: 30px; background-color: lightblue; overflow: clip"
+      >
+        This test text exists here to ensure that the "div" element is large
+        enough that the border radius is obvious.
+      </div>
+
       <form action="/submit">
         <p>Name: <input name="name" value="1" /></p>
         <p>Comment: <input name="comment" value="2" /></p>
