Optimize surface use

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         style="border-radius: 30px; background-color: lightblue; overflow: clip"
       >
         This test text exists here to ensure that the "div" element is large
-        enough that the border radius is obvious.
+        enough that the border radius is obvious. This test text exists here to
+        ensure that the "div" element is large enough that the border radius is
+        obvious.
       </div>
 
       <form action="/submit">
